Hover on mobiles possible fix 2

--- a/src/styles/FourthPanel.scss
+++ b/src/styles/FourthPanel.scss
@@ -45,12 +45,14 @@
       font-weight: 900;
     }
 
-    img:hover {
+    img:hover,
+    img:active {
       transform: translate(-50%, -50%) scale(1.6);
       filter: drop-shadow(0px 10px 9px $secondary-color);
     }
 
-    img:hover + .iconName {
+    img:hover + .iconName,
+    img:active + .iconName {
       transform: translate(-50%, -50%) scale(1);
       filter: drop-shadow(0px 10px 9px $secondary-color);
     }
@@ -113,18 +115,18 @@
   }
 }
 
-@media (hover: hover) and (pointer: fine) {
-  .FourthPanel {
-    .stackList {
-      img:hover {
-        transform: translate(-50%, -50%) scale(1.6);
-        filter: drop-shadow(0px 10px 9px $secondary-color);
-      }
+// @media (hover: hover) {
+//   .FourthPanel {
+//     .stackList {
+//       img:hover {
+//         transform: translate(-50%, -50%) scale(1.6);
+//         filter: drop-shadow(0px 10px 9px $secondary-color);
+//       }
 
-      img:hover + .iconName {
-        transform: translate(-50%, -50%) scale(1);
-        filter: drop-shadow(0px 10px 9px $secondary-color);
-      }
-    }
-  }
-}
+//       img:hover + .iconName {
+//         transform: translate(-50%, -50%) scale(1);
+//         filter: drop-shadow(0px 10px 9px $secondary-color);
+//       }
+//     }
+//   }
+// }
